--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <div class="card">
         <div class="search">
             <input type="text" name="" id="" placeholder="Enter City Name" spellcheck="false">
-            <button><img src="WA-img/search.png" alt=""></button>
+            <button><img src="search.png" alt=""></button>
         </div>
 
         <div class="weather">
-            <img src="WA-img/rain.png" alt="" class="weather-icon">
+            <img src="rain.png" alt="" class="weather-icon">
             <h1 class="temp">22°c</h1>
             <h2 class="city">New York</h2>
 
             <div class="details">
                 <div class="col">
-                    <img src="WA-img/humidity.png" alt="">
+                    <img src="humidity.png" alt="">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="WA-img/wind.png" alt="">
+                    <img src="wind.png" alt="">
                     <div>
                         <p class="wind">15 km/h</p>
                         <p>Wind Speed</p>
