--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="WA-style.css">
+    <link rel="website icon" type="png" href="https://cdn-icons-png.flaticon.com/512/9393/9393425.png">
     <title>Weather-App</title>
 </head>
 <body>
