--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <input type="text" name="" id="" placeholder="Enter City Name" spellcheck="false">
             <button><img src="search.png" alt=""></button>
         </div>
+        <div class="error">
+            <p>Invalid City Name</p>
+        </div>
 
         <div class="weather">
             <img src="rain.png" alt="" class="weather-icon">
